@@ -9,6 +9,7 @@
 - Improved: bold text now correctly styled even if system font is used as fallback (Chinese, Hebrew and Uyghur)
 - Improved: automatic Google Drive backup of current preferences disabled (not helpful when switching to a new phone and annoying when reinstalling the app)
 - Improved: disabled options in parallax section now greyed out
+- Improved: hide system-provided zoom option on non-Android-11 devices as this was removed in Android 12
 - Fixed: unchanged text contrast when switching dark mode inside an app
 - Fixed: wrong animation on Android 12+ when app theme or language were changed
 - Fixed: random wallpapers not working as expected
